2011-04-08  MORITA Hajime  <morrita@google.com>

        Reviewed by Simon Fraser.

        Negative spread should not make a sharp corner rounded
        https://bugs.webkit.org/show_bug.cgi?id=58162

        Updated the result. This new result matches other browsers behavior.

        * platform/mac/fast/box-shadow/inset-expected.checksum:
        * platform/mac/fast/box-shadow/inset-expected.png:

2011-04-08  Erik Arvidsson  <arv@chromium.org>

        Reviewed by Dimitri Glazkov.

        IFrame is getting the focus even though it is hidden
        https://bugs.webkit.org/show_bug.cgi?id=55861

        * fast/dom/hidden-iframe-no-focus-expected.txt: Added.
        * fast/dom/hidden-iframe-no-focus.html: Added.

2011-04-08  Jeff Timanus  <twiz@chromium.org>

        Reviewed by Kenneth Russell.

        Fall back to software rendering for Canvas2D when requesting a DrawingBuffer larger than supported by the GL environment.
        https://bugs.webkit.org/show_bug.cgi?id=57768

        * platform/chromium/test_expectations.txt:

2011-04-08  Daniel Cheng  <dcheng@chromium.org>

        Reviewed by Dmitry Titov.

        [chromium] Implement image/png support in DataTransferItems
        https://bugs.webkit.org/show_bug.cgi?id=58106

        Add a reftest to verify that the various bits in the pipeline work as expected.

        * editing/pasteboard/data-transfer-items-image-png-expected.html: Added.
        * editing/pasteboard/data-transfer-items-image-png.html: Added.

2011-04-08  Enrica Casucci  <enrica@apple.com>

        Reviewed by Maciej Stachowiak.

        Improve lifetime management of nodes in ReplaceNodeWithSpanCommand.
        https://bugs.webkit.org/show_bug.cgi?id=57595
        <rdar://problem/9222122>

        * editing/style/bold-with-dom-changes-expected.txt: Added.
        * editing/style/bold-with-dom-changes.html: Added.

2011-04-08  Xiaomei Ji  <xji@chromium.org>

        Reviewed by David Hyatt.
